<resources>
    <string name="app_name">CarritoDeCompras</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Producto">Producto</string>
    <string name="Nombre">Nombre:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="Precio">Precio:</string>
    <string name="Total">Total:</string>
    <string name="Agregar">Agregar</string>
    <string name="Calcular">Calcular</string>

    <string name="nav_1">Crear Producto</string>
    <string name="nav_2">Listar</string>
    <string name="nav_3">Salir</string>

    <string name="actualizar">Actualizar</string>

    <string name="valor">$0.0</string>

    <string name="ingNombre">Ingrese Nombre....</string>
    <string name="ingCantidad">Ingrese Cantidad....</string>
    <string name="ingPrecio">Ingrese Precio....</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="modificar">Editar</string>
    <string name="eliminar">Eliminar</string>
</resources>
