<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditarProducto">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/Producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:textStyle="bold"
                android:textAlignment="center" android:textSize="24sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Nombre"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
                    android:textStyle="bold" android:textAlignment="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNombreEdit" android:layout_weight="1" android:hint="@string/ingNombre"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1" android:textStyle="bold"
                    android:textAlignment="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtCantEdit" android:layout_weight="1" android:hint="@string/ingCantidad"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                    android:textStyle="bold" android:textAlignment="center"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/txtPrecioEdit" android:layout_weight="1" android:hint="@string/ingPrecio"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Total"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp" android:id="@+id/textView10" android:layout_weight="1"
                    android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
            <TextView
                    android:text="@string/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtTotalEdit" android:layout_weight="1"
                    android:textSize="18sp"/>
        </LinearLayout>
        <Button
                android:text="@string/Calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCalcularEdit"/>
        <Button
                android:text="@string/actualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnActualizarEdit"/>
    </LinearLayout>
</LinearLayout>