<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_producto"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/nav_1"/>
        <item
                android:id="@+id/nav_listar"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_2"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_exit"
                    android:icon="@android:drawable/ic_menu_close_clear_cancel"
                    android:title="@string/nav_3"/>
        </menu>
    </item>

</menu>
